<resources>
    <string name="app_name">Practica01</string>
    <string name="dia">Día</string>
    <string name="anyo">Año</string>
    <string name="mes">Mes</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="nombre">Nombre:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="calcular">Calcular</string>
    <string name="introduzca_el_nombre">Introduzca el nombre</string>
</resources>